Optimized orders flow